tests/snapshots/tui_snapshot__tui_wrapped_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:

    This is a longer assistant response that
    should wrap across multiple lines.



  [single-line] Enter to send
    > Type your message... (Enter to send, Alt+Enter for multi-line, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
